--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Lawliet - Loader ZC</title>
+    <title>Lawliet - Testing Cliengo</title>
     <link rel="stylesheet" href="./index.css" />
 
     <!-- Código de instalación Cliengo para pandy_zeus@hotmail.com --> 
@@ -12,6 +12,7 @@
 
   </head>
   <body>
+    
     <div class="container-img">
       <!--<img class="img-responsive1" src="./IMG/squares.svg" alt="" />-->
 
