--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container-img">
       <!--<img class="img-responsive1" src="./IMG/squares.svg" alt="" />-->
 
-      <img class="logo-zc" src="./zc.png" alt="" />
+      <img class="logo-zc" src="ZC.png" alt="" />
 
       <p class="shadowFrame">
         <svg
